--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
@@ -163,6 +163,19 @@
   }
 }
 
+.grid-4 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 8px;
+  
+  @media (max-width: 1200px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
 .grid-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
