--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
@@ -195,6 +195,10 @@
     grid-column: 1 / -1;
   }
 
+  &.span-2 {
+    grid-column: span 2;
+  }
+
   label {
     font-size: 0.75rem;
     font-weight: 500;
