--- a/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
+++ b/VinayakaGitWorkSpace/Project/VLimatEduzApp/src/app/features/student/student-detail-component/student-detail-component.scss
@@ -227,6 +227,11 @@
       color: var(--text-2);
     }
   }
+
+  input[type="checkbox"] {
+    width: auto;
+    margin-top: 6px; 
+  }
 }
 
 .modal-footer {
@@ -292,6 +297,7 @@
     gap: 8px;
     cursor: pointer;
     font-weight: normal;
+    white-space: nowrap;
   }
 
   input[type="checkbox"] {
@@ -477,6 +483,7 @@
     gap: 8px;
     cursor: pointer;
     font-weight: normal;
+    white-space: nowrap;
   }
 
   input[type="checkbox"] {
